file upload - improved jquery
worked with less content to make sure jquery is really how I want it

--- a/resume/index.html
+++ b/resume/index.html
@@ -1,215 +1,82 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Animate on Scroll Library -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-
-    <!-- Fonts and Icons -->
+  <!-- Animate on Scroll Library -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
 
 
-    <!-- My Stylesheet -->
-    <link rel="stylesheet" href="styles.css">
+  <!-- Fonts and Icons -->
 
-    <title>Jill Tyburski Resume</title>
-  </head>
-  <body>
-    <div class="container">
 
-      <h2>Work Experience</h2>
-      <div class="experience">
-        <div class="row justify-content-between">
-          <div class="col-6">
-              <h3>Pitt Tonight, University of Pittsburgh</h3>
-          </div>
-          <div class="col-4">
-            <h3>Fall 2017 – Spring 2019</h3>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            <h3>Producer and Head of Stage Production</h3>
-          </div>
-        </div>
-        <div class="row justify-content-around mb-md-5"">
-          <div class="col-md-3 description">
-            <h4 class="text-center lesson1">Collaboration</h4>
-            <ul class="expand-lesson1">
-              <li>Contributed and listened during meetings with each department to design a unique show, plan promotional material, and discuss how to make the show better each month</li>
-            </ul>
-          </div>
-          <div class="col-md-3 description">
-            <h4 class="text-center lesson1">Collaboration</h4>
-            <ul class="expand-lesson1">
-              <li>Contributed and listened during meetings with each department to design a unique show, plan promotional material, and discuss how to make the show better each month</li>
-            </ul>
-          </div>
-          <div class="col-md-3 description">
-            <h4 class="text-center lesson1">Collaboration</h4>
-            <ul class="expand-lesson1">
-              <li>Contributed and listened during meetings with each department to design a unique show, plan promotional material, and discuss how to make the show better each month</li>
-            </ul>
-          </div>
-          <div class="col-md-3 description">
-            <h4 class="text-center lesson1">Collaboration</h4>
-            <ul class="expand-lesson1">
-              <li>Contributed and listened during meetings with each department to design a unique show, plan promotional material, and discuss how to make the show better each month</li>
-            </ul>
-          </div>
-        </div>
+  <!-- My Stylesheet -->
+  <link rel="stylesheet" href="styles.css">
 
-        <div class="row justify-content-between">
-          <div class="col-6">
-              <h3>Pitt Tonight, University of Pittsburgh</h3>
-          </div>
-          <div class="col-4">
-            <h3>Fall 2017 – Spring 2019</h3>
-          </div>
+  <title>Jill Tyburski Resume</title>
+</head>
+
+<body>
+  <div class="container">
+
+    <h2>Work Experience</h2>
+    <div class="experience">
+      <div class="row justify-content-between">
+        <div class="col-7">
+          <h3>Pitt Tonight, University of Pittsburgh</h3>
         </div>
-        <div class="row">
-          <div class="col">
-            <h3>Producer and Head of Stage Production</h3>
-          </div>
+        <div class="col-3">
+          <h3>Fall 2017 – Spring 2019</h3>
         </div>
-        <div class="row justify-content-around description mb-md-5"">
-          <div class="col-md-3">
-            <h4 class="text-center lesson2">Collaboration</h4>
-            <div class="row">
-              <div class="col expand-lesson2">
-                Contributed and listened during meetings with each department to design a unique show, plan promotional material, and discuss how to make the show better each month
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <h4 class="text-center lesson2">Communication</h4>
-            <div class="row">
-              <div class="col expand-lesson2">
-                Promoted to Head of Stage Production because of strong communication skills with the Executive Producer and Production Assistants
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <h4 class="text-center lesson2">Leadership</h4>
-            <div class="row">
-              <div class="col expand-lesson2">
-                Led all backstage movements of a live program
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <h4 class="text-center lesson2">Production Skills</h4>
-            <div class="row">
-              <div class="col expand-lesson2">
-                Operated camera and audio equipment and edited multi-camera shows using Adobe Premiere Pro
-              </div>
-            </div>
-          </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <h3>Producer and Head of Stage Production</h3>
+        </div>
+      </div>
+      <div class="row justify-content-around mb-md-5">
+        <div class="col-md-3 description box test">
+          <h4 class="lesson" id="hide">Collaboration</h4>
+          <ul class="expand-lesson">
+            <h4>Collaboration</h4>
+            <li>Contributed and listened during meetings with each department to design a unique show, plan promotional material, and discuss how to make the show better each month</li>
+          </ul>
+        </div>
+        <div class="col-md-3 description box test">
+          <h4 class="lesson" id="hide">Communication</h4>
+          <ul class="expand-lesson">
+            <h4>Communication</h4>
+            <li>Promoted to Head of Stage Production because of strong communication skills with the Executive Producer and Production Assistants</li>
+          </ul>
+        </div>
+        <div class="col-md-3 description box test">
+          <h4 class="lesson" id="hide">Leadership</h4>
+          <ul class="expand-lesson">
+            <h4>Leadership</h4>
+            <li>Led all backstage movements of a live program</li>
+          </ul>
+        </div>
+        <div class="col-md-3 description box test">
+          <h4 class="lesson" id="hide">Production Skills</h4>
+          <ul class="expand-lesson">
+            <h4>Production Skills</h4>
+            <li>Operated camera and audio equipment and edited multi-camera shows using Adobe Premiere Pro</li>
+          </ul>
         </div>
 
-        <div class="row justify-content-between">
-          <div class="col-6">
-              <h3>Pitt Tonight, University of Pittsburgh</h3>
-          </div>
-          <div class="col-4">
-            <h3>Fall 2017 – Spring 2019</h3>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            <h3>Producer and Head of Stage Production</h3>
-          </div>
-        </div>
-        <div class="row justify-content-around description mb-md-5"">
-          <div class="col-md-3">
-            <h4 class="text-center lesson3">Collaboration</h4>
-            <div class="row">
-              <div class="col expand-lesson3">
-                Contributed and listened during meetings with each department to design a unique show, plan promotional material, and discuss how to make the show better each month
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <h4 class="text-center lesson3">Communication</h4>
-            <div class="row">
-              <div class="col expand-lesson3">
-                Promoted to Head of Stage Production because of strong communication skills with the Executive Producer and Production Assistants
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <h4 class="text-center lesson3">Leadership</h4>
-            <div class="row">
-              <div class="col expand-lesson3">
-                Led all backstage movements of a live program
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <h4 class="text-center lesson3">Production Skills</h4>
-            <div class="row">
-              <div class="col expand-lesson3">
-                Operated camera and audio equipment and edited multi-camera shows using Adobe Premiere Pro
-              </div>
-            </div>
-          </div>
-        </div>
 
-        <div class="row justify-content-between">
-          <div class="col-6">
-              <h3>Pitt Tonight, University of Pittsburgh</h3>
-          </div>
-          <div class="col-4">
-            <h3>Fall 2017 – Spring 2019</h3>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            <h3>Producer and Head of Stage Production</h3>
-          </div>
-        </div>
-        <div class="row justify-content-around description mb-md-5">
-          <div class="col-md-3">
-            <h4 class="text-center lesson4">Collaboration</h4>
-            <div class="row expand-lesson4">
-              <div class="col">
-                Contributed and listened during meetings with each department to design a unique show, plan promotional material, and discuss how to make the show better each month
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <h4 class="text-center lesson4">Communication</h4>
-            <div class="row  expand-lesson4">
-              <div class="col">
-                Promoted to Head of Stage Production because of strong communication skills with the Executive Producer and Production Assistants
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <h4 class="text-center lesson4">Leadership</h4>
-            <div class="row expand-lesson4">
-              <div class="col">
-                Led all backstage movements of a live program
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <h4 class="text-center lesson4">Production Skills</h4>
-            <div class="row expand-lesson4">
-              <div class="col">
-                Operated camera and audio equipment and edited multi-camera shows using Adobe Premiere Pro
-              </div>
-            </div>
-          </div>
-        </div>
+
+
+
+
+
 
       </div>
-
 
 
 
@@ -221,42 +88,67 @@
 
 
 
-    <!-- JS, Popper.js, and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
-    <!-- Animate on Scroll JS -->
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <script>
-      AOS.init();
 
-      $(document).ready(function(){
-        $(".lesson1").click(function(){
-          $(".expand-lesson1").slideToggle();
-        });
+
+
+
+  <!-- JS, Popper.js, and jQuery -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+  <!-- Animate on Scroll JS -->
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
+
+  <script>
+    AOS.init();
+
+
+    $(document).ready(function() {
+      $(".lesson").click(function() {
+        $(".lesson").hide();
+        $(".expand-lesson").show();
       });
+    });
 
-      $(document).ready(function(){
-        $(".lesson2").click(function(){
-          $(".expand-lesson2").slideToggle();
-        });
+    $(document).ready(function() {
+      $(".expand-lesson").click(function() {
+        $(".expand-lesson").hide();
+        $(".lesson").show();
       });
+    });
 
-      $(document).ready(function(){
-        $(".lesson3").click(function(){
-          $(".expand-lesson3").slideToggle();
-        });
-      });
 
-      $(document).ready(function(){
-        $(".lesson4").click(function(){
-          $(".expand-lesson4").slideToggle();
-        });
-      });
-    </script>
 
-  </body>
+    // $(document).ready(function() {
+    //   $(".lesson2").click(function() {
+    //     $(".expand-lesson2").slideToggle();
+    //   });
+    // });
+    //
+    // $(document).ready(function() {
+    //   $(".lesson3").click(function() {
+    //     $(".expand-lesson3").slideToggle();
+    //   });
+    // });
+    //
+    // $(document).ready(function() {
+    //   $(".lesson4").click(function() {
+    //     $(".expand-lesson4").slideToggle();
+    //   });
+    // });
+    //
+    // $(document).ready(function() {
+    //   $(".card").flip();
+    // });
+
+  </script>
+
+</body>
+
 </html>
