--- a/resume/index.html
+++ b/resume/index.html
@@ -27,17 +27,49 @@
 
 
     <div class="row">
+      <div class="col-12 col-lg-8">
+        <div class="skills p-4 mb-md-4">
+          <h2>Technical Skills</h2>
+
+              <div class="rotate">
+
+                  <div class="text">
+                    <h3 class="pb-2">Web Design and Development</h3>
+                    <h4>Proficient: <span class="skill">HTML</span><span class="skill">CSS</span><span class="skill">Bootstrap</span><span class="skill">Atom</span><span class="skill">Github</span></h4>
+                    <h4>Beginner: <span class="skill">JavaScript</span><span class="skill">jQuery</span><span class="skill">Python</span><span class="skill">Word Press</span><span class="skill">Adobe XD</span></h4>
+                    <h3 class="pb-2">Other Creative Programs</h3>
+                    <h4><span class="skill">Adobe Illustrator</span><span class="skill">Adobe Photoshop</span><span class="skill">Adobe Premiere Pro</span><span class="skill">Audacity</span><span class="skill">Microsoft Office Suite</span></h4>
+                  </div>
+
+
+              </div>
+
+
+
+
+
+          </div>
+        </div>
+
+    </div>
+
+
+
+
+
+
+    <div class="row">
       <div class="col-12">
         <div class="experience">
           <h2>Work Experience</h2>
           <div class="job">
             <div class="title p-2">
-              <div class="row justify-content-between">
+              <div class="row d-flex justify-content-between">
                 <div class="col-12 col-lg-7">
                   <h3>Pitt Tonight, University of Pittsburgh</h3>
                 </div>
                 <div class="col-12 col-lg-3">
-                  <h3>Fall 2017 – Spring 2019</h3>
+                  <h3 class="text-md-right">Fall 2017 – Spring 2019</h3>
                 </div>
               </div>
               <div class="row">
@@ -79,7 +111,7 @@
                   <h3>PCTV, Pittsburgh, PA</h3>
                 </div>
                 <div class="col-12 col-lg-3">
-                  <h3>May - June 2018</h3>
+                  <h3 class="text-md-right">May - June 2018</h3>
                 </div>
               </div>
               <div class="row">
@@ -91,23 +123,23 @@
 
             <div class="row justify-content-around mb-md-4">
               <div class="col-md-4">
-                <h4 class="lesson s-open l-2 color5 py-2 py-md-4" data-aos="flip-up" data-aos-delay="200" data-aos-once="true">Creativity</h4>
-                <ul class="details s-hidden d-2 color5" >
+                <h4 class="lesson s-open l-2 color2 py-2 py-md-4" data-aos="flip-up" data-aos-delay="200" data-aos-once="true">Creativity</h4>
+                <ul class="details s-hidden d-2 color2" >
                   <h4 class="py-1 py-md-2">Creativity</h4>
                   <li>Told stories through video</li>
                   <li>Planned video content from scratch with a small team of interns and turned an idea into a completed video within a one or two day deadline</li>
                 </ul>
               </div>
               <div class="col-md-4">
-                <h4 class="lesson s-open l-2 py-2 color6 py-md-4" data-aos="flip-up" data-aos-delay="250" data-aos-once="true">Writing</h4>
-                <ul class="details s-hidden d-2 color6"  >
+                <h4 class="lesson s-open l-2 py-2 color3 py-md-4" data-aos="flip-up" data-aos-delay="250" data-aos-once="true">Writing</h4>
+                <ul class="details s-hidden d-2 color3"  >
                   <h4 class="py-1 py-md-2">Writing</h4>
                   <li>Researched local businesses or events and then wrote interview questions in preparation for video shoots on that topic</li>
                 </ul>
               </div>
               <div class="col-md-4">
-                <h4 class="lesson s-open l-2 color7 py-2 py-md-4" data-aos="flip-up" data-aos-delay="300" data-aos-once="true">Production Skills</h4>
-                <ul class="details s-hidden d-2 color7" >
+                <h4 class="lesson s-open l-2 color4 py-2 py-md-4" data-aos="flip-up" data-aos-delay="300" data-aos-once="true">Production Skills</h4>
+                <ul class="details s-hidden d-2 color4" >
                   <h4 class="py-1 py-md-2">Production Skills</h4>
                   <li>Operated camera and audio equipment and edited multi-camera shows using Adobe Premiere Pro</li>
                 </ul>
@@ -118,12 +150,12 @@
 
           <div class="job">
             <div class="title p-2">
-              <div class="row justify-content-between">
+              <div class="row d-flex justify-content-between">
                 <div class="col-12 col-lg-7">
                   <h3>Whitecoat Productions, London, England</h3>
                 </div>
                 <div class="col-12 col-lg-3">
-                  <h3>July 2017 – August 2017</h3>
+                  <h3 class="text-md-right">July 2017 – August 2017</h3>
                 </div>
               </div>
               <div class="row">
@@ -159,7 +191,7 @@
                   <h3>Pittsburgh Filmmakers Cinemas, Pittsburgh, PA</h3>
                 </div>
                 <div class="col-12 col-lg-3">
-                  <h3>January 2017 – July 2017</h3>
+                  <h3 class="text-md-right">January 2017 – July 2017</h3>
                 </div>
               </div>
               <div class="row">
