--- a/resume/index.html
+++ b/resume/index.html
@@ -16,7 +16,7 @@
   <!-- Fonts and Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Montserrat:wght@400;600&family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Montserrat:wght@400;600&family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 
   <!-- My Stylesheet -->
   <link rel="stylesheet" href="styles.css">
@@ -82,7 +82,7 @@
               <div class="row d-flex justify-content-between align-items-center">
 
                 <!-- Degree Education Box -->
-                <div class="col-12 col-md-6 school py-5 pl-5" data-aos="fade-up" data-aos-delay="50" data-aos-once="true">
+                <div class="col-12 col-md-6 school py-5 pl-5" data-aos="fade-up" data-aos-delay="50" data-aos-duration="1000" data-aos-once="true">
                   <h3>University of Pittsburgh, Pittsburgh, PA</h3>
                   <h3><strong>Bachelor of Arts in Film and Media Studies</strong></h3>
                   <h3><strong>Bachelor of Arts in English Writing</strong></h3>
@@ -94,7 +94,7 @@
 
 
                 <!-- Relevant Coursework Education Box -->
-                <div class="col-12 col-md-5 courses mt-3 mt-md-auto px-4 pt-2" data-aos="fade-up" data-aos-delay="100" data-aos-once="true">
+                <div class="col-12 col-md-5 courses mt-3 mt-md-auto px-4 pt-2" data-aos="fade-up" data-aos-delay="150" data-aos-duration="1000" data-aos-once="true">
                   <h3 class="text-center">Relevant Coursework</h3>
                   <h5>From Pitt</h5>
                   <ul>
@@ -341,6 +341,7 @@
 
   <!-- Footer -->
   <footer>
+
 
 
 
