--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Montserrat:wght@400;600&family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 
+  <script src="https://kit.fontawesome.com/a7455e0873.js" crossorigin="anonymous"></script>
+
   <!-- My Stylesheet -->
   <link rel="stylesheet" href="styles.css">
 
@@ -34,7 +36,7 @@
 
     <!-- Navigation Bar -->
     <nav>
-      <div class="row nav navbar">
+      <div class="row">
         <div class="col-12 d-none d-sm-block">
           <ul>
             <li><a href="#education" class="text-uppercase">Education</a></li>
@@ -58,9 +60,7 @@
           <div class="intro">
             <h3>Hi, I'm</h3>
             <h1>Jill Tyburski</h1>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec,
-              pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis
-              pretium. Integer tincidunt. Cras dapibus. Vivamus elementume.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean bibendum ex non euismod commodo. Ut et tincidunt elit. Nam dapibus, lorem eget tempor ultrices, ligula risus sollicitudin purus, quis vehicula ante ligula a felis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Etiam eu luctus.</p>
           </div>
 
         </div>
@@ -79,7 +79,7 @@
         <div class="col-12 mt-5">
           <div class="education">
             <h2 id="education">Education</h2>
-            <div class="s  p-3 mb-4">
+            <div class="p-3 mb-4">
               <div class="row d-flex justify-content-between align-items-center">
 
                 <!-- Degree Education Box -->
@@ -126,7 +126,7 @@
       <div class="row">
         <div class="col-12 col-lg-8">
           <div class="skills p-4 mb-5">
-            <h2 class="" id="skills" data-aos="zoom-right" data-aos-delay="50" data-aos-duration="1000" data-aos-once="true">Technical Skills</h2>
+            <h2 id="skills" data-aos="zoom-right" data-aos-delay="50" data-aos-duration="1000" data-aos-once="true">Technical Skills</h2>
 
             <!-- Rotated Background  -->
             <div class="rotate">
@@ -177,22 +177,24 @@
               <!-- Job 1 Details -->
               <div class="row justify-content-around mb-md-4">
                 <div class="col-md-4">
-                  <h4 class="lesson s-hidden l-1 color1 py-2 py-md-4">Collaboration</h4>
-                  <ul class="details s-open d-1 color1" data-aos="flip-up" data-aos-delay="50" data-aos-once="true">
+                  <h4 class="lesson s-open l-1 color1 pt-2 pt-md-4 pb-1 pb-md-2" data-aos="flip-up" data-aos-delay="50" data-aos-once="true">Collaboration<span class="arrow a-1"><i class="fas fa-chevron-down"></i></span></h4>
+                  <ul class="details s-hidden d-1 color1">
                     <h4 class="py-1 py-md-2">Collaboration</h4>
                     <li>Contributed and listened during meetings with each department to design a unique show, plan promotional material, and discuss how to make the show better each month</li>
                   </ul>
+
                 </div>
                 <div class="col-md-4">
-                  <h4 class="lesson s-hidden l-1 color1 py-2 py-md-4">Communication</h4>
-                  <ul class="details s-open d-1 color1" data-aos="flip-up" data-aos-delay="100" data-aos-once="true">
+                  <h4 class="lesson s-open l-1 color1 pt-2 pt-md-4 pb-1 pb-md-2" data-aos="flip-up" data-aos-delay="100" data-aos-once="true">Communication<span class="arrow a-1"><i class="fas fa-chevron-down"></i></span></h4>
+                  <ul class="details s-hidden d-1 color1">
                     <h4 class="py-1 py-md-2">Communication</h4>
                     <li>Promoted to Head of Stage Production because of strong communication skills with the Executive Producer and Production Assistants</li>
                   </ul>
+
                 </div>
                 <div class="col-md-4">
-                  <h4 class="lesson s-hidden l-1 color1 py-2 py-md-4">Leadership</h4>
-                  <ul class="details s-open d-1 color1" data-aos="flip-up" data-aos-delay="150" data-aos-once="true">
+                  <h4 class="lesson s-open l-1 color1 pt-2 pt-md-4 pb-1 pb-md-2" data-aos="flip-up" data-aos-delay="150" data-aos-once="true">Leadership<span class="arrow a-1"><i class="fas fa-chevron-down"></i></span></h4>
+                  <ul class="details s-hidden d-1 color1">
                     <h4 class="py-1 py-md-2">Leadership</h4>
                     <li>Led all backstage movements of a live program</li>
                   </ul>
@@ -222,7 +224,7 @@
               <!-- Job 2 Details -->
               <div class="row justify-content-around mb-md-4">
                 <div class="col-md-4">
-                  <h4 class="lesson s-open l-2 color2 py-2 py-md-4" data-aos="flip-up" data-aos-delay="50" data-aos-once="true">Creativity</h4>
+                  <h4 class="lesson s-open l-2 color2 pt-2 pt-md-4 pb-1 pb-md-2" data-aos="flip-up" data-aos-delay="50" data-aos-once="true">Creativity<span class="arrow a-2"><i class="fas fa-chevron-down"></i></span></h4>
                   <ul class="details s-hidden d-2 color2">
                     <h4 class="py-1 py-md-2">Creativity</h4>
                     <li>Told stories through video</li>
@@ -230,14 +232,14 @@
                   </ul>
                 </div>
                 <div class="col-md-4">
-                  <h4 class="lesson s-open l-2 py-2 color2 py-md-4" data-aos="flip-up" data-aos-delay="100" data-aos-once="true">Writing</h4>
+                  <h4 class="lesson s-open l-2 color2 pt-2 pt-md-4 pb-1 pb-md-2" data-aos="flip-up" data-aos-delay="100" data-aos-once="true">Writing<span class="arrow a-2"><i class="fas fa-chevron-down"></i></span></h4>
                   <ul class="details s-hidden d-2 color2">
                     <h4 class="py-1 py-md-2">Writing</h4>
                     <li>Researched local businesses or events and then wrote interview questions in preparation for video shoots on that topic</li>
                   </ul>
                 </div>
                 <div class="col-md-4">
-                  <h4 class="lesson s-open l-2 color2 py-2 py-md-4" data-aos="flip-up" data-aos-delay="150" data-aos-once="true">Production Skills</h4>
+                  <h4 class="lesson s-open l-2 color2 pt-2 pt-md-4 pb-1 pb-md-2" data-aos="flip-up" data-aos-delay="150" data-aos-once="true">Production Skills<span class="arrow a-2"><i class="fas fa-chevron-down"></i></span></h4>
                   <ul class="details s-hidden d-2 color2">
                     <h4 class="py-1 py-md-2">Production Skills</h4>
                     <li>Operated camera and audio equipment and edited multi-camera shows using Adobe Premiere Pro</li>
@@ -268,17 +270,18 @@
               <!-- Job 3 Details -->
               <div class="row justify-content-around mb-md-4">
                 <div class="col-md-6">
-                  <h4 class="lesson s-open l-3 color1 py-2 py-md-4" data-aos="flip-up" data-aos-delay="50" data-aos-once="true">Problem Solving</h4>
+                  <h4 class="lesson s-open l-3 color1 pt-2 pt-md-4 pb-1 pb-md-2" data-aos="flip-up" data-aos-delay="50" data-aos-once="true">Problem Solving<span class="arrow a-3"><i class="fas fa-chevron-down"></i></span></h4>
                   <ul class="details s-hidden d-3 color1">
                     <h4 class="py-1 py-md-2">Problem Solving</h4>
                     <li>Listened to everyone on production sets or in the office in order to then fulfill the quickly changing needs of fast-paced work environments</li>
                   </ul>
                 </div>
                 <div class="col-md-6">
-                  <h4 class="lesson s-open l-3 py-2 color1 py-md-4" data-aos="flip-up" data-aos-delay="100" data-aos-once="true">Planning</h4>
+                  <h4 class="lesson s-open l-3 color1 pt-2 pt-md-4 pb-2 pb-md-2" data-aos="flip-up" data-aos-delay="100" data-aos-once="true">Planning<span class="arrow a-3"><i class="fas fa-chevron-down"></i></span></h4>
                   <ul class="details s-hidden d-3 color1">
                     <h4 class="py-1 py-md-2">Planning</h4>
                     <li>Helped prepare for shooting days</li>
+
                   </ul>
                 </div>
               </div>
@@ -306,21 +309,21 @@
               <!-- Job 4 Details -->
               <div class="row justify-content-around mb-md-4">
                 <div class="col-md-4">
-                  <h4 class="lesson s-open l-4 color2 py-2 py-md-4" data-aos="flip-up" data-aos-delay="50" data-aos-once="true">Multitasking</h4>
+                  <h4 class="lesson s-open l-4 color2 pt-2 pt-md-4 pb-1 pb-md-2" data-aos="flip-up" data-aos-delay="50" data-aos-once="true">Multitasking<span class="arrow a-4"><i class="fas fa-chevron-down"></i></span></h4>
                   <ul class="details s-hidden d-4 color2">
                     <h4 class="py-1 py-md-2">Multitasking</h4>
                     <li>Supervised concessions stand, sold tickets, digitally projected movie, communicated with customers, helped clean theater, and counted and recorded all sales nightly</li>
                   </ul>
                 </div>
                 <div class="col-md-4">
-                  <h4 class="lesson s-open l-4 py-2 color2 py-md-4" data-aos="flip-up" data-aos-delay="100" data-aos-once="true">Teaching</h4>
+                  <h4 class="lesson s-open l-4 color2 pt-2 pt-md-4 pb-1 pb-md-2" data-aos="flip-up" data-aos-delay="100" data-aos-once="true">Teaching<span class="arrow a-4"><i class="fas fa-chevron-down"></i></span></h4>
                   <ul class="details s-hidden d-4 color2">
                     <h4 class="py-1 py-md-2">Teaching</h4>
                     <li>Wrote a Projection Manual to help train all future projectionists at the theater. Trained several new employees, ensuring they are set up for success during a transitional phase in management of the small theater</li>
                   </ul>
                 </div>
                 <div class="col-md-4">
-                  <h4 class="lesson s-open l-4 color2 py-2 py-md-4" data-aos="flip-up" data-aos-delay="150" data-aos-once="true">Organization</h4>
+                  <h4 class="lesson s-open l-4 color2 pt-2 pt-md-4 pb-1 pb-md-2" data-aos="flip-up" data-aos-delay="150" data-aos-once="true">Organization<span class="arrow a-4"><i class="fas fa-chevron-down"></i></span></h4>
                   <ul class="details s-hidden d-4 color2">
                     <h4 class="py-1 py-md-2">Organization</h4>
                     <li>Transferred accounting records from paper to Excel spreadsheet. Improved communication between other managers/projectionists by leaving specific notes after each night</li>
@@ -381,28 +384,44 @@
 
 
     // jQuery code for displaying job descriptions
-    // experience row 1 (start open - click to close)
+    // experience row 1 (start closed - click to open)
     $(document).ready(function() {
-      $(".d-1").click(function() {
-        $(".d-1").hide();
-        $(".l-1").fadeIn();
-        $(".lesson").addClass("except");
+      $(".l-1").on({
+        mouseenter: function(){
+          $(".a-1").animate({fontSize:'.9rem'});
+        },
+        mouseleave: function(){
+          $(".a-1").animate({fontSize:'.6rem'});
+        },
+        click: function(){
+          $(".l-1").hide();
+          $(".d-1").fadeIn("slow");
+        }
       });
     });
 
     $(document).ready(function() {
-      $(".l-1").click(function() {
-        $(".l-1").hide();
-        $(".d-1").show();
+      $(".d-1").click(function() {
+        $(".d-1").hide();
+        $(".l-1").show();
       });
     });
+
 
 
     // experience row 2 (start closed - click to open)
     $(document).ready(function() {
-      $(".l-2").click(function() {
-        $(".l-2").hide();
-        $(".d-2").fadeIn("slow");
+      $(".l-2").on({
+        mouseenter: function(){
+          $(".a-2").animate({fontSize:'.9rem'});
+        },
+        mouseleave: function(){
+          $(".a-2").animate({fontSize:'.6rem'});
+        },
+        click: function(){
+          $(".l-2").hide();
+          $(".d-2").fadeIn("slow");
+        }
       });
     });
 
@@ -414,11 +433,20 @@
     });
 
 
+
     // experience row 3 (start closed - click to open)
     $(document).ready(function() {
-      $(".l-3").click(function() {
-        $(".l-3").hide();
-        $(".d-3").fadeIn("slow");
+      $(".l-3").on({
+        mouseenter: function(){
+          $(".a-3").animate({fontSize:'.9rem'});
+        },
+        mouseleave: function(){
+          $(".a-3").animate({fontSize:'.6rem'});
+        },
+        click: function(){
+          $(".l-3").hide();
+          $(".d-3").fadeIn("slow");
+        }
       });
     });
 
@@ -430,11 +458,20 @@
     });
 
 
+
     // experience row 4 (start closed - click to open)
     $(document).ready(function() {
-      $(".l-4").click(function() {
-        $(".l-4").hide();
-        $(".d-4").fadeIn("slow");
+      $(".l-4").on({
+        mouseenter: function(){
+          $(".a-4").animate({fontSize:'.9rem'});
+        },
+        mouseleave: function(){
+          $(".a-4").animate({fontSize:'.6rem'});
+        },
+        click: function(){
+          $(".l-4").hide();
+          $(".d-4").fadeIn("slow");
+        }
       });
     });
 
@@ -444,6 +481,12 @@
         $(".l-4").show();
       });
     });
+
+
+
+
+
+
   </script>
 
 
